# tsf-engine

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  activate.ps1  activate.sh  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
models/: model_loader.py
models/cnn_n_beats/: cnn_n_beats_block.py  cnn_n_beats_model.py  config.json  model_cnn_nbeats.weights.h5
models/configs/: model_config.yaml
models/nbeats/: model_nbeats.weights.h5  nbeats_blocks.py  nbeats_model.py
models/nbeats_cnn/: config.json  model_conv.weights.h5  nbeats_cnn_blocks.py  nbeats_cnn_model.py
